First working decoder with JSGF support

--- a/config.h.in
+++ b/config.h.in
@@ -1,10 +1,12 @@
 #ifndef CONFIG_HH
 #define CONFIG_HH
 
-#define PYRAMID_VERSION @Pyramid_VERSION@
+#define PYRAMID_VERSION "@Pyramid_VERSION@"
 #define DEFAULT_RUNNING_DIRECTORY "/etc/pyramid"
 
-#define DEFAULT_LM_PATH @DEFAULT_LM_PATH@
-#define DEFAULT_HMM_PATH @DEFAULT_HMM_PATH@
+#define DEFAULT_LM_PATH "@DEFAULT_LM_PATH@"
+#define DEFAULT_HMM_PATH "@DEFAULT_HMM_PATH@"
+#define DEFAULT_DICT_PATH "@DEFAULT_DICT_PATH@"
+#define DEFAULT_LOG_PATH "@DEFAULT_LOG_PATH@"
 
 #endif
